--- a/Main_Page/main_page.css
+++ b/Main_Page/main_page.css
@@ -126,8 +126,8 @@ button {
 }
 
 .item {
-  padding: 5px;
-  margin: 15px;
+  padding: 0px;
+  margin: 5px;
 }
 
 .item {
@@ -135,7 +135,6 @@ button {
   width: 50%;
   max-width: 300px;
 }
-
 
 .overlay {
   position: absolute;
@@ -159,6 +158,7 @@ button {
 .video {
   display: flex;
   align-content: stretch;
+  max-width: 100%;
 }
 
 .video-round {
