--- a/Lifestyle/lifestyle.css
+++ b/Lifestyle/lifestyle.css
@@ -51,7 +51,7 @@ a:active{
   color:var(--primary-teal);
 }
 
-h3 
+h3
 a:link{
   text-decoration: none;
   color:var(--primary-teal);
@@ -81,6 +81,7 @@ a:active{
   position: absolute;
   top: 5%;
   right: 20px;
+  font-family: "Bellota";
 }
 
 .navbar a{
@@ -111,7 +112,7 @@ a:active{
   width: 100%;
   position: relative;
   text-align: center;
-  color: default;
+  font-family: "Bellota";
 }
 
 .main-container .column {
@@ -122,12 +123,13 @@ a:active{
 .main-container img {
   width: 100%;
   height: 100%;
+  color: white;
 }
 
-
-
-
-
+.main-container .source {
+  font-style: italic;
+  color: darkblue;
+}
 
 .column {
   position: relative;
@@ -150,6 +152,7 @@ a:active{
   width: 0;
   height: 100%;
   transition: .5s ease;
+  color: white;
 }
 
 .overlay ul.list {
@@ -163,7 +166,6 @@ a:active{
 }
 
 .text {
-  color: var(--primary-teal);
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -172,14 +174,9 @@ a:active{
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   white-space: nowrap;
+  color: white;
   
 }
-
-
-
-
-
-
 
 footer {
   background: none repeat scroll 0 0 transparent;
